--- a/about.html
+++ b/about.html
@@ -33,6 +33,11 @@
                 <img src="imagen2.png" alt="Descripción de la imagen 2" />
                 <img src="imagen3.png" alt="Descripción de la imagen 3" />
             </div>
+
+            <div class="container greeting">
+                <h1>¡Gracias por su visita!</h1>
+            </div>
+
         </main>
     
         <footer>
